<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <VideoView
        android:id="@+id/video_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_login"
        android:layout_width="wrap_content"
        android:visibility="visible"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/corner_shape"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:elevation="6dp"
            android:hint="@string/username"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"
            android:minWidth="50dp"
            android:textColor="@color/darkblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.371" />

        <EditText
            android:id="@+id/edtPassWord"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/corner_shape"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:elevation="6dp"
            android:drawablePadding="10dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minWidth="50dp"
            android:textColor="@color/darkblue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUsername" />

        <ImageView
            android:id="@+id/txtNameApp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/texname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.179" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/corner_shape"
            android:backgroundTint="#00AB50"
            android:elevation="6dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassWord" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/layout_btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/chuacotaikhoan"
            android:textColor="#009CC3"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/corner_around"
            android:backgroundTint="#F3403B"
            android:gravity="center"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365">


        <EditText
            android:id="@+id/edtUsernameDK"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/corner_shape"
            android:drawableEnd="@drawable/ic_baseline_person_24"
            android:elevation="6dp"
            android:hint="@string/typeUsername"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"
            android:minWidth="50dp"
            android:textColor="@color/darkblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtName"
            app:layout_constraintVertical_bias="0.054" />

        <EditText
            android:id="@+id/edtPassDK"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_shape"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:elevation="6dp"
            android:hint="@string/pass"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:minWidth="50dp"
            android:textColor="@color/darkblue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtUsernameDK"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edtPassDK2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_shape"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:elevation="6dp"
            android:hint="@string/retypePass"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:minWidth="50dp"
            android:textColor="@color/darkblue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassDK" />

        <ImageView
            android:id="@+id/txtName"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/texname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.013" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/corner_shape"
            android:backgroundTint="#F3403B"
            android:elevation="6dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPassDK2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>